--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ flask-socketio==0.5.0
 numpy==1.9.1
 scipy==0.15.1
 pandas==0.15.2
-
+scikit-learn
 
 # Symlinks to system packages
 ## symlink: bsddb3
