--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 ipython==0.13.1
 flask==0.10.1
-flask-socketio==0.5.0
+#flask-socketio==0.5.0
 numpy==1.9.1
 scipy==0.15.1
 pandas==0.15.2
 scikit-learn
-
-# Symlinks to system packages
-## symlink: bsddb3
-
+blaze
+multiuserblazeserver
+abstract_rendering
+bokeh
