--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,14 @@ Pillow==2.9.0
 numpy==1.9.2
 scipy==0.16.0
 numexpr==2.4.3
-cython==0.22.1
-tables==3.2.0
+cython==0.23
+tables==3.2.1
 pandas==0.16.2
 scikit-learn==0.16.1
 toposort==1.4
 tdigest==0.4.0
 tornado==4.2.1
 ipython==4.0.0
-jsonschema=2.5.1
+jsonschema==2.5.1
 notebook==4.0.1
 bokeh==0.9.2
