--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 Pillow==3.0.0
-numpy==1.10.0
-scipy==0.16.0
-numexpr==2.4.4
-cython==0.23.3
+numpy==1.10.1
+scipy==0.16.1
+numexpr==2.4.6
+cython==0.23.4
 tables==3.2.2
-pandas==0.16.2
-scikit-learn==0.16.1
+pandas==0.17.1
+scikit-learn==0.17
 toposort==1.4
-tdigest==0.4.0
-ipython==4.0.0
+tdigest==0.4.0.1
+ipython==4.0.1
 jsonschema==2.5.1
-notebook==4.0.5
+notebook==4.0.6
 bokeh==0.10.0
-ipywidgets==4.0.3
+ipywidgets==4.1.1
 flask==0.10.1
-tornado>=4.0.1
+tornado==4.3
