--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,10 @@ pandas==0.16.2
 scikit-learn==0.17
 toposort==1.4
 tdigest==0.4.0.1
-ipython==4.0.1
-jsonschema==2.5.1
-notebook==4.0.6
-bokeh==0.10.0
-ipywidgets==4.1.1
 flask==0.10.1
 tornado==4.3
+#ipython==4.0.1
+#jsonschema==2.5.1
+#notebook==4.0.6
+#bokeh==0.10.0
+#ipywidgets==4.1.1
