fix scheduler, add a sink module to avoid empty loops

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Pillow==3.0.0
-numpy==1.10.1
-scipy==0.16.1
+Pillow==3.1.1
+numpy==1.10.4
+scipy==0.17.0
 numexpr==2.4.6
 cython==0.23.4
 tables==3.2.2
-pandas==0.16.2
+pandas==0.18.0rc1
 scikit-learn==0.17
 toposort==1.4
 tdigest==0.4.0.1
