--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ scipy==0.17.0
 numexpr==2.4.6
 cython==0.23.4
 tables==3.2.2
-pandas==0.18.0rc1
+-e git+https://github.com/pydata/pandas.git@v0.18.0rc1#egg=pandas
+#pandas==0.18.0rc1
 scikit-learn==0.17
 toposort==1.4
 tdigest==0.4.0.1
