--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,4 @@
-Pillow==3.1.1
-numpy==1.10.4
-scipy==0.17.0
-numexpr==2.4.6
-cython==0.23.4
-tables==3.2.2
+--index-url https://pypi.python.org/simple/
+
 -e git+https://github.com/pydata/pandas.git@v0.18.0rc1#egg=pandas
-#pandas==0.18.0rc1
-scikit-learn==0.17
-toposort==1.4
-tdigest==0.4.0.1
-flask==0.10.1
-tornado==4.3
-#ipython==4.0.1
-#jsonschema==2.5.1
-#notebook==4.0.6
-#bokeh==0.10.0
-#ipywidgets==4.1.1
+-e .
