--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,10 +12,13 @@ source:
   git_url: https://github.com/jdfekete/progressivis.git
 
 requirements:
-  build:
+  host:
+    - coverage
     - python=3.6
     - setuptools
     - cython=0.26.1
+
+  build:
     - numpy=1.13.3
     - scipy=0.19.1
 
@@ -49,7 +52,6 @@ requirements:
 
   test:
     - nose
-    - coverage
 
 about:
   home: https://github.com/jdfekete/progressivis
