--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ parentdir_prefix = progressivis-
 verbosity=3
 with-doctest=1
 with-coverage=1
-cover-erase=1
+#cover-erase=1
 cover-inclusive=1
 cover-html=1
 cover-html-dir=coverage
