--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,27 @@
---index-url https://pypi.python.org/simple/
-
--e .
+cython
+numpy
+nose>=1.3.7
+coverage
+Pillow>=4.2.0
+numpy>=1.11.3
+scipy>=0.18.1
+numexpr>=2.6.1
+tables>=3.3.0
+pandas>=0.19.1
+scikit-learn>=0.18.1
+toposort>=1.4
+tdigest>=0.4.1.0
+flask>=0.11.1
+tornado>=4.4.2
+h5py>=2.6.0
+zarr>=2.1.4
+numcodecs>=0.5.2
+bcolz>=1.1.2
+datashape>=0.5.4
+pyroaring==0.0.7 # when pyroaring>0.0.5 => error
+msgpack-python>=0.4.8
+boto
+s3fs
+sqlalchemy
+memory_profiler
+tabulate
