--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,7 @@
-#before_script:
-#-  /home/gitlab-runner/anaconda3/bin/python ./setup.py install
-
 language: python
 python:
-  - '2.7'
-  - '3.6'
+  - 2.7
+  - 3.6
 
-matrix:
-  include:
-  - python: "2.7"
-    env: TEST_SUITE=suite_2_7
-  - python: "3.6"
-    env: TEST_SUITE=suite_3_6
-
-stages:
-  - install
-  - build
-  - test
-  - cleanup
-  
-install:
-  - pip install -r requirements.txt
-
-build:
-    script:
-    - python ./setup.py install
-
-cleanup:
-    script:
-    - /bin/rm -rf /tmp/progressivis_*
-    when: always
-    
-script:
-  - python  setup.py nosetests
-
+install: python setup.py install
+script: python setup.py nosetests
