--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ python:
   - 2.7
   - 3.6
 
-install: python setup.py install
+install: 
+  - pip install -r requirements.txt
+  - python setup.py install
+
 script: python setup.py nosetests
