--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 
 install: 
   - pip install -r requirements.txt
+  - pip install -r requirements-dask.txt
   - python -m pyroaring install --user
   - export LD_LIBRARY_PATH="`pwd`/croaring:$LD_LIBRARY_PATH"
   - python setup.py install
