--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
-python:
-  - 2.7
-  - 3.6
-
-env:
-  - CONDA=false
-  - CONDA=true
+matrix:
+  include:
+  - python: "2.7"
+    env: CONDA=false
+  - python: "3.6"
+    env: CONDA=false
+  - python: "3.6"
+    env: CONDA=true
 
 install: 
   - if [[ "$CONDA" == "false" ]]; then
