--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: python
-matrix:
-  include:
-  - python: "2.7"
-    env: CONDA=false
-  - python: "3.6"
-    env: CONDA=false
-  - python: "3.6"
-    env: CONDA=true
+python:
+  - 2.7
+  - 3.6
+
+env: CONDA=false
 
 install: 
   - if [[ "$CONDA" == "false" ]]; then
