--- a/.travis.yml
+++ b/.travis.yml
@@ -3,35 +3,11 @@ python:
   - 2.7
   - 3.6
 
-env: CONDA=false
-
 install: 
-  - if [[ "$CONDA" == "false" ]]; then
-      pip install -r requirements.txt
-      pip install -r requirements-dask.txt
-      python -m pyroaring install --user
-      export LD_LIBRARY_PATH="`pwd`/croaring:$LD_LIBRARY_PATH"
-      python setup.py install
-    else
-      if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-        wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
-      else
-        wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-      fi
-      bash miniconda.sh -b -p $HOME/miniconda
-      export PATH="$HOME/miniconda/bin:$PATH"
-      hash -r
-      conda config --set always_yes yes --set changeps1 no
-      conda config --add channels progressivis
-      conda config --add channels conda-forge
-      conda update -q conda
-      # Useful for debugging any issues with conda
-      conda info -a
-
-      # Replace dep1 dep2 ... with your dependencies
-      conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
-      source activate test-environment
-      python setup.py install
-    fi
+  - pip install -r requirements.txt
+  - pip install -r requirements-dask.txt
+  - python -m pyroaring install --user
+  - export LD_LIBRARY_PATH="`pwd`/croaring:$LD_LIBRARY_PATH"
+  - python setup.py install
 
 script: python setup.py nosetests
