fix req for jenkins

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ bcolz>=1.1.2
 datashape>=0.5.2
 pyroaring==0.0.7 # when pyroaring>0.0.5 => error
 msgpack-python>=0.4.8
+python-dateutil==2.6.1 # botocore wants < 2.7.0,>=2.1
 boto
 s3fs
 sqlalchemy
