--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ pandas>=0.19.1
 scikit-learn>=0.18.1
 toposort>=1.4
 tdigest>=0.4.1.0
-flask>=0.11.1
+flask>=0.12.1
+eventlet>=0.22.0
+flask-socketio>=2.9.0
 tornado>=4.4.2
 h5py>=2.6.0
 zarr>=2.1.4
