--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ zarr>=2.2.0
 numcodecs>=0.5.5
 bcolz>=1.1.2
 datashape>=0.5.2
-pyroaring==0.0.7 # when pyroaring>0.0.5 => error
+pyroaring==0.1.7
 msgpack-python>=0.4.8
 python-dateutil==2.6.1 # botocore wants < 2.7.0,>=2.1
 boto
