--- a/.pylintrc
+++ b/.pylintrc
@@ -78,7 +78,7 @@ output-format=parseable
 files-output=no
 
 # Tells whether to display a full report or only the messages
-reports=yes
+reports=no
 
 # Python expression which should return a note less than 10 (10 is the highest
 # note). You have access to the variables errors warning, statement which
