fix MDM configuration editor

--- a/progressivis/progressivis_nb_widgets/js/package.json
+++ b/progressivis/progressivis_nb_widgets/js/package.json
@@ -27,14 +27,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "webpack": "^3.5.5",
-    "rimraf": "^2.6.1"
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "rimraf": "^2.6.1",
+    "webpack": "^3.5.5"
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.1 || ^2",
-    "lodash": "^4.17.4",
+    "chroma-js": "",
     "d3": "5.0.0",
-    "chroma-js": ""
+    "lodash": "^4.17.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "jupyterlab": {
     "extension": "lib/labplugin"
