--- a/progressivis/progressivis_nb_widgets/js/package.json
+++ b/progressivis/progressivis_nb_widgets/js/package.json
@@ -39,6 +39,7 @@
     "chroma-js": "",
     "d3": "5.0.0",
     "lodash": "^4.17.4",
+    "multiclass-density-maps": "~0.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
