--- a/progressivis/progressivis_nb_widgets/js/package.json
+++ b/progressivis/progressivis_nb_widgets/js/package.json
@@ -31,7 +31,9 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "rimraf": "^2.6.1",
+    "style-loader": "^1.1.3",
     "webpack": "^3.5.5"
   },
   "dependencies": {
@@ -41,7 +43,8 @@
     "lodash": "^4.17.4",
     "multiclass-density-maps": "~0.1.5",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "webcola": "^3.4.0"
   },
   "jupyterlab": {
     "extension": "lib/labplugin"
