--- a/progressivis/progressivis_nb_widgets/js/package.json
+++ b/progressivis/progressivis_nb_widgets/js/package.json
@@ -18,13 +18,14 @@
   ],
   "files": [
     "lib/**/*.js",
-    "lib/**/*.css",
+    "css/**/*.css",
     "dist/*.js"
   ],
   "scripts": {
     "clean": "rimraf dist/",
-    "prepublish": "webpack",
-    "build": "webpack --mode=production",
+    "prepublish": "npm run build:babel",
+    "build:babel": "rm -rf lib/*.js && babel src --out-dir lib",
+    "build": "npm run build:babel && webpack",  
     "watch": "webpack --watch --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
