fixes for pandas 1.0.3

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,16 @@
-cython
-nose>=1.3.7
-coverage
 Pillow>=4.2.0
 numpy>=1.11.3
 scipy>=0.18.1
-matplotlib
 numexpr>=2.6.1
-#tables>=3.3.0
+pytables>=3.3.0
 pandas>=0.19.1
 scikit-learn>=0.18.1
-#tdigest>=0.4.1.0
-flask>=0.12.1
-eventlet>=0.22.0
-flask-socketio>=2.9.0
+# tdigest>=0.4.1.0
 numcodecs>=0.5.5
 datashape>=0.5.2
-#pyroaring>=0.2.3
+# pyroaring>=0.2.3
 msgpack-python>=0.4.8
-python-dateutil==2.6.1 # botocore wants < 2.7.0,>=2.1
+python-dateutil>=2.6.1  # botocore wants < 2.7.0>=2.1
 boto
 s3fs
 sqlalchemy
@@ -25,5 +18,11 @@ memory_profiler
 tabulate
 requests
 fast-histogram
-#rangehttpserver
-
+# rangehttpserver
+aiohttp
+# aiohttp_jinja2
+# python_socketio
+cython
+numpy
+nose>=1.3.7
+coverage
