--- a/progressivis/progressivis_nb_widgets/js/package.json
+++ b/progressivis/progressivis_nb_widgets/js/package.json
@@ -25,7 +25,7 @@
     "clean": "rimraf dist/",
     "prepublish": "npm run build:babel",
     "build:babel": "rm -rf lib/*.js && babel src/*.js --out-dir lib",
-    "build": "npm run build:babel && webpack",  
+    "build": "npm run build:babel && webpack",
     "watch": "webpack --watch --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -36,6 +36,7 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "file-loader": "^6.0.0",
     "rimraf": "^2.6.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
@@ -46,6 +47,7 @@
     "chroma-js": "",
     "core-js": "^3.6.4",
     "d3": "5.0.0",
+    "datatables": "^1.10.18",
     "jquery": "^3.4.1",
     "lodash": "^4.17.4",
     "multiclass-density-maps": "~0.1.5",
