--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Pillow>=4.2.0
 numpy>=1.11.3
 scipy>=0.18.1
 numexpr>=2.6.1
-pytables>=3.3.0
+#pytables>=3.3.0
 pandas>=0.19.1
 scikit-learn>=0.18.1
 # tdigest>=0.4.1.0
@@ -23,6 +23,5 @@ aiohttp
 # aiohttp_jinja2
 # python_socketio
 cython
-numpy
 nose>=1.3.7
 coverage
