--- a/progressivis/progressivis_nb_widgets/js/package.json
+++ b/progressivis/progressivis_nb_widgets/js/package.json
@@ -31,10 +31,11 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
-    "babel-loader": "^8.0.6",
+    "@babel/compat-data": "^7.9.0",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
     "rimraf": "^2.6.1",
@@ -43,7 +44,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^1.1 || ^2",
+    "@jupyter-widgets/base": "^1.1 || ^2 || ^3",
     "chroma-js": "",
     "core-js": "^3.6.4",
     "d3": "5.0.0",
