--- a/environment.yml
+++ b/environment.yml
@@ -9,8 +9,10 @@ dependencies:
   - pip
   - numpy
   - cython
+  - jupyter
   - pip:
-    - install -e .
-    - install -e progressivis_nb_widgets
+    - install .
+    - install widgets
+
 
     
