--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,23 @@
 language: python
-cache: pip
+
 python:
   - 3.8
 
+addons:
+  apt:
+    packages:
+      - g++
+
 install:
-  - pip install cython
-  - pip install -e .  
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+  - bash miniconda.sh -b -p $HOME/miniconda				       
+  - source "$HOME/miniconda/etc/profile.d/conda.sh"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda info -a
+  - conda create -q -f binder/environment.yml
+  - conda activate progressivis
 
 env:
   - PROGRESSIVIS_STORAGE='numpy'
