--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
-  - conda create -q -f binder/environment.yml
+  - conda env create -q -f binder/environment.yml
   - conda activate progressivis
 
 env:
