--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache :
 
 install:
   - if [[ -d $HOME/miniconda ]]; then
-       echo "Miniconda already installed"
+       echo "Miniconda already installed";
     else
        wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
        bash miniconda.sh -b -p $HOME/miniconda;
