--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache :
 
 
 install:
-  - if [[ -d $HOME/miniconda ]]; then
+  - if [[ -d $HOME/miniconda/etc ]]; then
        echo "Miniconda already installed";
     else
        wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
