--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - if [[ -d $HOME/miniconda/etc ]]; then
        echo "Miniconda already installed";
     else
+       rm -rf "$HOME/miniconda";
        wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
        bash miniconda.sh -b -p $HOME/miniconda;
     fi;
