boosting mybinder demo

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -9,13 +9,26 @@ dependencies:
   - nodejs
   - pkgconfig
   - pip
-  - numpy
-  - cython
-  - pybind11
-  - xtensor-python
-  - croaring=0.2.63
-  - voila
-  - jupyterlab=2
+  - numpy>=1.16.5
+  - scipy>=0.18.1
+  - numexpr>=2.6.1
+  - pandas>=1.0.0
+  - pillow>=4.2.0
+  - requests
+  - scikit-learn>=0.18.1
+  #- cython
+  #- pybind11
+  #- xtensor-python
+  #- croaring=0.2.63
+  #- pyroaring=0.2.9
+  - datashape
+  - fast-histogram
+  - s3fs
+  #- voila
+  - jupyter>=1.0.0
+  - ipywidgets>=7.0.0
+  - ipydatawidgets=4.0.1
+  #- sidecar
   - pip:
     - -e ..
     - -e ../widgets
