--- a/environment-ci.yml
+++ b/environment-ci.yml
@@ -16,8 +16,8 @@ dependencies:
   - pillow>=4.2.0
   - requests
   - scikit-learn>=0.18.1
-  #- cython
-  #- pybind11
+  - cython
+  - pybind11
   - xtensor-python
   #- croaring=0.2.63
   #- pyroaring==0.2.9
