--- a/environment.yml
+++ b/environment.yml
@@ -24,8 +24,14 @@ dependencies:
   - datashape
   - fast-histogram
   - s3fs
+  - voila
+  - jupyterlab=2
   - pip:
     - tdigest>=0.4.1.0
     - rangehttpserver
+    - aiohttp
+    - aiohttp_jinja2
+    - python_socketio
+    - click
     - -e .
     - -e ./widgets
