--- a/environment-ci.yml
+++ b/environment-ci.yml
@@ -3,7 +3,7 @@ name: progressivis
 channels:
   - conda-forge
   - anaconda
- 
+
 dependencies:
   - python=3.8
   - nodejs
@@ -23,6 +23,7 @@ dependencies:
   - pyroaring==0.2.11
   - datashape
   - fast-histogram
+  - python-socketio
   - s3fs
   - pip:
     - tdigest>=0.4.1.0
