--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ name: progressivis
 channels:
   - conda-forge
   - anaconda
- 
+
 dependencies:
   - python=3.8
   - nodejs
@@ -23,15 +23,17 @@ dependencies:
   - pyroaring==0.2.11
   - datashape
   - fast-histogram
+  - python-socketio
   - s3fs
   - voila
   - jupyterlab=2
+  - ipywidgets>=7.0.0
+  - ipydatawidgets=4.0.1
+  - aiohttp
+  - aiohttp-jinja2
+  - click
   - pip:
     - tdigest>=0.4.1.0
     - rangehttpserver
-    - aiohttp
-    - aiohttp_jinja2
-    - python_socketio
-    - click
     - -e .
     - -e ./widgets
