--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -24,6 +24,6 @@ dependencies:
   - ipywidgets>=7.0.0
   - ipydatawidgets=4.0.1
   - pip:
-    - tdigest>=0.4.1.0
+    #- tdigest>=0.4.1.0
     - -e ..
     - -e ../widgets
