--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - numexpr>=2.6.1
   - pandas>=1.0.0
   - pillow>=4.2.0
+  - pyyaml>=5.4.1
   - requests
   - scikit-learn>=0.18.1
   - cython
