--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -23,6 +23,9 @@ dependencies:
   - jupyter>=1.0.0
   - ipywidgets>=7.0.0
   - ipydatawidgets=4.0.1
+  - vega_datasets
+  - vega
+  - altair
   - pip:
     - tdigest>=0.4.1.0
     - -e ..
