--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -12,7 +12,7 @@ dependencies:
   - numpy>=1.16.5
   - scipy>=0.18.1
   - numexpr>=2.6.1
-  - pandas>=1.0.0
+  - pandas>=1.0.0<=1.2.5
   - pillow>=4.2.0
   - requests
   - scikit-learn>=0.18.1
@@ -20,6 +20,8 @@ dependencies:
   - datashape
   - fast-histogram
   - s3fs
+  - typing_extensions
+  - typing-extensions  
   - jupyter>=1.0.0
   - ipywidgets>=7.0.0
   - ipydatawidgets=4.0.1
