--- a/environment.yml
+++ b/environment.yml
@@ -5,14 +5,14 @@ channels:
   - anaconda
 
 dependencies:
-  - python=3.8
+  - python=3.9
   - nodejs
   - pkgconfig
   - pip
   - numpy>=1.16.5
   - scipy>=0.18.1
   - numexpr>=2.6.1
-  - pandas>=1.0.0
+  - pandas==1.2.5
   - pillow>=4.2.0
   - pyyaml>=5.4.1
   - requests
@@ -27,6 +27,7 @@ dependencies:
   - python-engineio=3.13.2
   - python-socketio=4.6.0
   - s3fs
+  - typing_extensions
   - voila
   - jupyterlab=2
   - ipywidgets>=7.0.0
@@ -35,8 +36,9 @@ dependencies:
   - aiohttp-jinja2
   - click
   - pyyaml
-  - vega_datasets
-  - vega
+  - poetry==1.1.6
+  #- vega_datasets
+  #- vega
   - altair
   - pip:
     - tdigest>=0.4.1.0
