purge travis cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache :
 
 
 install:
+  - rm -rf "$MINICONDA_DIR/etc";
   - if [[ -d $MINICONDA_DIR/etc ]]; then
        echo "Miniconda already installed";
     else
