--- a/setup.cfg
+++ b/setup.cfg
@@ -24,3 +24,8 @@ cover-html-dir=coverage
 cover-package=progressivis
 where=tests
 tests=progressivis
+
+[flake8]
+max-line-length = 88
+select = C,E,F,W,B,B950
+extend-ignore = E203, E501
