--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,10 +3,10 @@ name: Python Tests
 on:
   push:
     branches:
-    - main
+    - master
   pull_request:
     branches:
-    - main
+    - master
 
 jobs:
   run:
