--- a/environment.yml
+++ b/environment.yml
@@ -12,11 +12,11 @@ dependencies:
   - numpy>=1.16.5
   - scipy>=0.18.1
   - numexpr>=2.6.1
-  - pandas==1.2.5
+  - pandas>=1.2.5
   - pillow>=4.2.0
   - pyyaml>=5.4.1
   - requests
-  - scikit-learn==0.23.2
+  - scikit-learn>=0.23.2
   - cython
   - pybind11
   - xtensor-python
