--- a/environment.yml
+++ b/environment.yml
@@ -34,6 +34,8 @@ dependencies:
   - aiohttp
   - aiohttp-jinja2
   - click
+  - pandas-stubs
+  - types-pillow
   - pip:
     - tdigest>=0.4.1.0
     - rangehttpserver
