--- a/setup.cfg
+++ b/setup.cfg
@@ -16,13 +16,13 @@ parentdir_prefix = progressivis-
 [nosetests]
 verbosity=3
 with-doctest=1
-with-coverage=1
+#with-coverage=1
 #cover-erase=1
 cover-inclusive=1
 cover-html=1
 cover-html-dir=coverage
 cover-package=progressivis
-where=tests
+# where=tests
 tests=progressivis
 
 [flake8]
