Fix more typing, fix the test suite, improve

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,8 +22,8 @@ cover-inclusive=1
 cover-html=1
 cover-html-dir=coverage
 cover-package=progressivis
-# where=tests
-tests=progressivis
+where=tests
+# tests=progressivis
 
 [flake8]
 max-line-length = 88
