Improve type checking with @overload and add widgets in type checking

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,3 +1,4 @@
 [mypy]
 plugins = numpy.typing.mypy_plugin
+files = progressivis,tests,widgets/progressivis_nb_widgets/nbwidgets
 # mypy_path = stubs
