Force download of mnist at startup

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -32,6 +32,9 @@ jobs:
     - name: Create the conda environment
       run: conda env create -q python=${{ matrix.python_version }} -f environment.yml
 
+    - name: Download a file
+      run: wget https://datahub.io/machine-learning/mnist_784/r/mnist_784.csv -O data/mnist_784.csv
+
     - name: Run tests
       run: |
         source /usr/share/miniconda/etc/profile.d/conda.sh
