Add more dataflow tests, fixed bugs when all modules are removed. Add a _stop method to tests

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -41,4 +41,4 @@ jobs:
         conda activate progressivis
         mkdir data
         mv mnist_784.csv data
-        python setup.py nosetests
+        python setup.py nosetests -w tests
