--- a/setup.cfg
+++ b/setup.cfg
@@ -22,8 +22,8 @@ cover-inclusive=1
 cover-html=1
 cover-html-dir=coverage
 cover-package=progressivis
-where=tests
-nologcapture=0
+# where=tests
+nologcapture=1
 # tests=progressivis
 
 [flake8]
