More typing and improve group management to collect dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ parentdir_prefix = progressivis-
 [test]
 
 [nosetests]
-verbosity=2
+verbosity=3
 with-doctest=1
 #with-coverage=1
 #cover-erase=1
@@ -23,7 +23,10 @@ cover-html=1
 cover-html-dir=coverage
 cover-package=progressivis
 # where=tests
-nologcapture=1
+nologcapture=0
+logging-level=INFO
+logging-clear-handlers=1
+
 # tests=progressivis
 
 [flake8]
