Add on_ending to Module to deal with the deletion of modules shown by widgets. Add more typing. Fix a bug in scheduler and input.

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,9 +24,8 @@ cover-html-dir=coverage
 cover-package=progressivis
 # where=tests
 nologcapture=0
-logging-level=INFO
+# logging-level=INFO
 logging-clear-handlers=1
-
 # tests=progressivis
 
 [flake8]
