Improve type checking for linalg and several tests

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -2,4 +2,4 @@
 plugins = numpy.typing.mypy_plugin
 files = progressivis,tests,widgets/progressivis_nb_widgets/nbwidgets
 mypy_path = typings
-exclude = ^progressivis/(core/_version\.py|server|linalg)
+exclude = ^progressivis/(core/_version\.py|server)
