freeze numpy==1.22.0 because 1.22.4 get an error in test_00_storageengine

--- a/environment.yml
+++ b/environment.yml
@@ -9,7 +9,7 @@ dependencies:
   - nodejs
   - pkgconfig
   - pip
-  - numpy>=1.21.4
+  - numpy==1.22.0
   - scipy>=0.18.1
   - numexpr>=2.6.1
   - pandas>=1.2.5
