Start managing progress for groups, cleanup, and build documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,4 +31,10 @@ logging-clear-handlers=1
 [flake8]
 max-line-length = 88
 select = C,E,F,W,B,B950
-extend-ignore = E203, E501
+extend-ignore = E203, E501, W503, W504
+
+[build_sphinx]
+project = 'progressivis'
+version = 0.6
+release = 0.6
+source-dir = doc
