--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -38,7 +38,7 @@ jobs:
         git clone https://github.com/RoaringBitmap/CRoaring.git
         git clone https://github.com/xtensor-stack/xtensor-python.git
         git clone https://github.com/lemire/CRoaringUnityBuild.git
-        python -m pip install -e datasketches-cpp --user
+        python -m pip install datasketches-cpp --user
         python -m pip install --nodeps -e . --user
         python -m python -m pip install pytest pytest-cov --user
         coverage run -m pytest tests -vv
