--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -38,7 +38,7 @@ jobs:
         git clone https://github.com/xtensor-stack/xtensor-python.git
         git clone https://github.com/lemire/CRoaringUnityBuild.git
         python -m pip install --no-deps -e .
-        python -m python -m pip install pytest pytest-cov
+        python -m pip install pytest pytest-cov
         coverage run -m pytest tests -vv
 
     - name: Coverage
