testing git submodule init

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -36,6 +36,7 @@ jobs:
         git clone https://github.com/xtensor-stack/xtl.git
         git clone https://github.com/RoaringBitmap/CRoaring.git
         git clone https://github.com/xtensor-stack/xtensor-python.git
+        git submodule init
         python -m pip install --no-deps -e .
         coverage run -m pytest tests -vv
 
