--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -24,18 +24,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Download a file
-      run: wget --no-verbose https://datahub.io/machine-learning/mnist_784/r/mnist_784.csv -O mnist_784.csv
+      run: |
+        wget --no-verbose https://datahub.io/machine-learning/mnist_784/r/mnist_784.csv -O mnist_784.csv
+        mkdir data
+        mv mnist_784.csv data/
 
     - name: Run tests
       run: |
-        mkdir data
-        mv mnist_784.csv data
         python -m pip install -r requirements_ci.txt
-        git clone https://github.com/pybind/pybind11.git
-        git clone https://github.com/xtensor-stack/xtensor.git
-        git clone https://github.com/xtensor-stack/xtl.git
-        git clone https://github.com/RoaringBitmap/CRoaring.git
-        git clone https://github.com/xtensor-stack/xtensor-python.git
         git submodule init
         git submodule update
         python -m pip install --no-deps -e .
