--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule "CRoaringUnityBuild"]
 	path = CRoaringUnityBuild
 	url = https://github.com/lemire/CRoaringUnityBuild.git
+[submodule "pybind11"]
+	path = pybind11
+	url = https://github.com/pybind/pybind11.git
+[submodule "xtensor"]
+	path = xtensor
+	url = https://github.com/xtensor-stack/xtensor.git
+[submodule "xtl"]
+	path = xtl
+	url = https://github.com/xtensor-stack/xtl.git
+[submodule "xtensor-python"]
+	path = xtensor-python
+	url = https://github.com/xtensor-stack/xtensor-python.git
