typing improvement for mypy strict mode

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,8 @@ repos:
         args: [--tb]
         additional_dependencies:
           - 'numpy'
+          - 'ipython'
+          - 'jinja2'
           - 'sqlalchemy-stubs'
           - 'pandas-stubs'
           - 'traits-stubs'
