--- a/.github/workflows/typing.yml
+++ b/.github/workflows/typing.yml
@@ -1,4 +1,4 @@
-name: Python Tests
+name: Typing Tests
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name Set up Python 3.11
+    - name: Set up Python 3.11
     - actions/setup-python@v4
     - with:
         python-version: '3.11'
