--- a/.github/workflows/typing.yml
+++ b/.github/workflows/typing.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.11
-    - actions/setup-python@v4
+    - uses: actions/setup-python@v4
     - with:
         python-version: '3.11'
     - name: Run mypy
