--- a/.github/workflows/typing.yml
+++ b/.github/workflows/typing.yml
@@ -22,10 +22,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.11
-    - uses: actions/setup-python@v4
-    - with:
+      uses: actions/setup-python@v4
+      with:
         python-version: '3.11'
     - name: Run mypy
       run: |
         python -m pip install -r requirements_typing.txt
-        mypy --strict progressivis tests widgets
+        mypy --strict progressivis/ tests/ widgets/
