--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -40,3 +40,14 @@ jobs:
     - name: Coverage
       run: |
         coverage report -m
+    - name: Pip freeze
+      if: failure()
+      run: |
+        mkdir downloads
+        python -m pip freeze > downloads/pip_freeze.txt
+    - name: Upload frozen env
+      if: failure()
+      uses: actions/upload-artifact@v3
+      with:
+        name: pip-freeze
+        path: downloads
