--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
     hooks:
       - id: trailing-whitespace
   - repo: https://github.com/pycqa/flake8
-    rev: ''
+    rev: 6.0.0
     hooks:
       - id: flake8
 
