--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -25,25 +25,21 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
-    - name: Install ProgressiVis
+    - name: Install ProgressiVis + doc tools
       run: |
         python -m pip install -r requirements_ci.txt
+        python -m pip install -r requirements_doc.txt
         git submodule init
         git submodule update
         python -m pip install --no-deps -e .
-        coverage run -m pytest tests -vv
-
-    - name: Coverage
+    - name: Make html
       run: |
-        coverage report -m
-    - name: Pip freeze
-      if: failure()
-      run: |
-        mkdir downloads
-        python -m pip freeze > downloads/pip_freeze.txt
-    - name: Upload frozen env
-      if: failure()
+        pushd doc
+	make html
+	popd
+    - name: Upload doc
+      if: always()
       uses: actions/upload-artifact@v3
       with:
-        name: pip-freeze
-        path: downloads
+        name: progressivis-doc
+        path: doc/_build/
