--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -1,4 +1,4 @@
-name: Python Tests
+name: Doc generation
 
 on:
   push:
@@ -28,7 +28,7 @@ jobs:
     - name: Install ProgressiVis + doc tools
       run: |
         python -m pip install -r requirements_ci.txt
-        python -m pip install -r requirements_doc.txt
+        python -m pip install -r doc/requirements_doc.txt
         git submodule init
         git submodule update
         python -m pip install --no-deps -e .
