--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -25,6 +25,8 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
+    - name: Setup Graphviz
+      uses: ts-graphviz/setup-graphviz@v1
     - name: Install ProgressiVis + doc tools
       run: |
         python -m pip install -r requirements_ci.txt
