--- a/doc/requirements_doc.txt
+++ b/doc/requirements_doc.txt
@@ -4,3 +4,4 @@ sphinx-autodoc-typehints >= 1.20.0
 sphinxcontrib-napoleon >= 0.7
 myst-parser >= 0.18.1
 pydata-sphinx-theme >= 0.12.0
+sphinxcontrib-mermaid
