--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,9 +5,12 @@
 # Required
 version: 2
 
+submodules:
+  include: all
+
 # Set the version of Python and other tools you might need
 build:
-  os: ubuntu-20.04
+  os: ubuntu-22.04
   tools:
     python: "3.11"
     # You can also specify other tool versions:
