--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools>=40.8.0", "wheel", "numpy>=1.22.4", "cython", "pybind11>=2.0.1"]
+requires = ["setuptools>=40.8.0", "wheel", "numpy>=1.22.4", "cython", "pybind11>=2.0.1", "versioneer-518"]
 build-backend = "setuptools.build_meta"
