--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -35,10 +35,9 @@ jobs:
 
     - name: Run tests
       run: |
-        python -m pip install -r requirements_ci.txt
         git submodule init
         git submodule update
-        python -m pip install --no-deps -e .
+        python -m pip install .
         coverage run -m pytest tests -vv
 
     - name: Coverage
