--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -35,6 +35,7 @@ jobs:
 
     - name: Run tests
       run: |
+        python -m pip install -r requirements_ci.txt
         git submodule init
         git submodule update
         python -m pip install .
