--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -29,11 +29,10 @@ jobs:
       uses: ts-graphviz/setup-graphviz@v1
     - name: Install ProgressiVis + doc tools
       run: |
-        python -m pip install -r requirements_ci.txt
         python -m pip install -r doc/requirements_doc.txt
         git submodule init
         git submodule update
-        python -m pip install --no-deps -e .
+        python -m pip install .
     - name: Make html
       run: |
         pushd doc
