--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     hooks:
       - id: mypy
         exclude: ^stool/
-        args: [--explicit-package-bases]
+        args: [--strict, --explicit-package-bases]
         additional_dependencies:
           - 'numpy'
           - 'ipython'
