--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,6 +1,6 @@
 [mypy]
 plugins = numpy.typing.mypy_plugin, mypy/module_plugin.py
-files = progressivis,tests,widgets/progressivis_nb_widgets/nbwidgets, mypy
+files = progressivis,tests, mypy
 mypy_path = typings
 exclude = ^progressivis/(core/_version\.py|server)
 
