remove widgets dir from test[skip ci]

--- a/.github/workflows/typing.yml
+++ b/.github/workflows/typing.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Run mypy
       run: |
         python -m pip install -r requirements_typing.txt
-        mypy --strict progressivis/ tests/ widgets/
+        mypy --strict progressivis/ tests/
