minor fixes[skip ci]

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -2,5 +2,5 @@
 plugins = numpy.typing.mypy_plugin, mypy/module_plugin.py
 files = progressivis,tests, mypy
 mypy_path = typings
-exclude = ^progressivis/(core/_version\.py|server)
+exclude = ^progressivis/(core/_version\.py|server|build)
 
