--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
     rev: v1.1.1
     hooks:
       - id: mypy
+        language_version: python3.10
         exclude: ^stool/
         args: [--strict, --explicit-package-bases]
         additional_dependencies:
