--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,9 @@ submodules:
 # Set the version of Python and other tools you might need
 build:
   os: ubuntu-22.04
-  tools:
+  apt_packages:
+    - graphviz
+   tools:
     python: "3.11"
     # You can also specify other tool versions:
     # nodejs: "19"
