--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,12 @@
 [build-system]
-requires = ["setuptools>=40.8.0", "wheel", "numpy>=1.22.4", "cython", "pybind11>=2.0.1", "versioneer-518"]
+requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "numpy>=1.22.4", "cython", "pybind11>=2.0.1"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "progressivis"
+# Important: Remove any existing version declaration
+# version = "0.0.1"
+dynamic = ["version"]
+# more missing
+
+[tool.setuptools_scm]
