--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "numpy>=1.22.4", "cython", "pybind11>=2.0.1"]
+requires = ["setuptools==64", "setuptools_scm>=8", "wheel", "numpy>=1.22.4", "cython", "pybind11>=2.0.1"]
 build-backend = "setuptools.build_meta"
 
 [project]
