--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,12 @@ repos:
     rev: v4.4.0
     hooks:
       - id: trailing-whitespace
-  - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.6
     hooks:
-      - id: flake8
+      # Run the linter.
+      - id: ruff
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.1.1
